Fix spacing

--- a/components/home/about.module.scss
+++ b/components/home/about.module.scss
@@ -1,8 +1,11 @@
 .about {
   padding: 50px 15px;
 
-  .columnLeft {
+  .row {
     margin-top: 50px;
+  }
+
+  .columnLeft {
     p {
       margin: 10px 0;
     }
