--- a/components/home/blog.module.scss
+++ b/components/home/blog.module.scss
@@ -14,6 +14,10 @@
     padding: 25px;
     border: 1px solid #cecece;
     margin-bottom: 25px;
+
+    h4 {
+      margin: 0;
+    }
   }
 
   @media only screen and (min-width: 768px) {
