--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -54,6 +54,10 @@
       width: 60%;
       margin-bottom: unset;
       /* padding-right: 100px; */
+
+      h1 {
+        margin-bottom: 0;
+      }
     }
 
     .columnRight {
