--- a/components/home/portfolio.module.scss
+++ b/components/home/portfolio.module.scss
@@ -6,13 +6,17 @@
   }
 
   .columnLeft {
+    h3 {
+      margin-bottom: 0;
+    }
+
     small {
       font-style: italic;
       color: #616161;
     }
 
     .description {
-      margin: 25px 0;
+      margin: 25px 0 10px;
     }
 
     .portfolioLinks {
